fix: CI/local build sync - remove nightly features, fix dependencies
- Fixed tailwind_fuse package name (underscore not hyphen)
- Removed nightly features from Leptos to work with stable Rust
- Applied cargo fmt to all UI code
- Added local-ci.sh script to mirror CI checks locally
- Now local builds match CI environment exactly

--- a/crates/nimbus-ui/Cargo.toml
+++ b/crates/nimbus-ui/Cargo.toml
@@ -9,9 +9,9 @@ license.workspace = true
 nimbus-types = { path = "../nimbus-types" }
 
 # Leptos
-leptos = { version = "0.6", features = ["csr", "nightly"] }
-leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
-leptos_router = { version = "0.6", features = ["csr", "nightly"] }
+leptos = { version = "0.6", features = ["csr"] }
+leptos_meta = { version = "0.6", features = ["csr"] }
+leptos_router = { version = "0.6", features = ["csr"] }
 
 # Web
 web-sys = { version = "0.3", features = [
@@ -36,7 +36,7 @@ serde.workspace = true
 serde_json.workspace = true
 
 # UI Components
-tailwind-fuse = "0.3"
+tailwind_fuse = "0.3"
 
 # Utils
 console_error_panic_hook = "0.1"
