--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,11 @@ jsonwebtoken = "9.2"
 argon2 = "0.5"
 uuid = { version = "1.7", features = ["v4", "serde"] }
 
+# Kubernetes
+kube = { version = "0.96", features = ["client", "runtime"] }
+k8s-openapi = { version = "0.23", features = ["v1_31"] }
+base64 = "0.22"
+
 # Observability
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
