--- a/crates/nimbus-auth/Cargo.toml
+++ b/crates/nimbus-auth/Cargo.toml
@@ -30,3 +30,8 @@ tracing.workspace = true
 # Error handling
 thiserror.workspace = true
 anyhow.workspace = true
+
+# Kubernetes
+kube.workspace = true
+k8s-openapi.workspace = true
+base64.workspace = true
